--- a/src/common/stylus/reset.styl
+++ b/src/common/stylus/reset.styl
@@ -33,10 +33,12 @@ footer, header, menu, nav, section
 blockquote, q
   quotes: none
 
+em , i 
+  font-style:normal
+
 blockquote:before, blockquote:after,
 q:before, q:after
   content: none
-
 table
   border-collapse: collapse
   border-spacing: 0
