change some bug

--- a/src/common/stylus/reset.styl
+++ b/src/common/stylus/reset.styl
@@ -68,6 +68,10 @@ body, html
   line-height: 1
 
 // box-sizing
+*::-webkit-scrollbar {
+  width:0;
+  display: none;    
+}
 *
   margin: 0;
   padding: 0;
